# data-scarcity-battery

./: .gitignore  CLAUDE.md  README.md  STATUS.md  package-lock.json  package.json  pyproject.toml
api/: main.py  platform.py
api/chain/: service.py
app/: globals.css  layout.tsx  page.tsx
backend/: .env.example  pyproject.toml
backend/api/: scenarios.py
backend/api/chain/: __init__.py  config.py
backend/data/ingest/: weather.py
backend/hardhat/: .env.example  hardhat.config.ts  package.json  tsconfig.json
backend/hardhat/scripts/: deploy.ts
backend/optim/: battery.py
backend/scripts/: rebake_scenarios.py
backend/tests/: test_battery.py  test_platform.py
components/: AthensMapView.tsx  DataFlowView.tsx  DecisionPanel.tsx  DemoPlaybook.tsx  PerformanceStats.tsx  PlatformFlowView.tsx  PriceActionChart.tsx  ProvenanceBadge.tsx  SmartVsNaive.tsx  TimeScrubber.tsx
data/ingest/: entsoe.py
frontend/: .env.example  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: EdgeBar.tsx  IsometricMegapack.tsx  PriceActionChart.tsx  ScenarioPicker.tsx  SmartVsNaive.tsx  SubmissionHub.tsx  TimeScrubber.tsx
frontend/lib/: baseline.ts  decisions.ts
hardhat/: README.md
hardhat/contracts/: ReceiptToken.sol
lib/: api.ts  baseline.ts  data-flow.ts  interpolate.ts  platform-api.ts  platform-data.ts  scenarios-data.ts
optim/: milp.py
scripts/: rebake_scenarios.py
tests/: test_milp.py  test_platform.py
